[package]
name = "generate-sxt-dory-params"
version = "0.1.0"
edition = "2021"

[dependencies]

clap = { version = "4.0", features = ["derive"] }

proof-of-sql = { version = "0.33.12" }
proof-of-sql-parser = { version = "0.33.12" }
rand = { version = "0.8", features = ["std"]}
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3.1" }
indicatif = "0.17.8"
once_cell = "1.20.2"
tar = "0.4"
blitzar = "3.4.0"
flate2 = "1.0.34"
